--- a/common-repository/pom.xml
+++ b/common-repository/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.supzx.utils</groupId>
         <artifactId>zx-common</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>common-repository</artifactId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>cn.supzx.utils</groupId>
             <artifactId>common-base</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
