--- a/common-rpc/pom.xml
+++ b/common-rpc/pom.xml
@@ -6,10 +6,11 @@
     <parent>
         <groupId>cn.supzx.utils</groupId>
         <artifactId>zx-common</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>common-rpc</artifactId>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -20,7 +21,7 @@
         <dependency>
             <groupId>cn.supzx.utils</groupId>
             <artifactId>common-base</artifactId>
-            <version>${project.version}</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
