--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -10,6 +10,7 @@
     </parent>
 
     <artifactId>common-base</artifactId>
+    <version>1.0.1</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
